--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bulma": "^0.7.5",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
