--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "chart.js": "^2.8.0",
